First article neurolink.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,18 @@
             <p>Summary of the article and the technology it talks about</p>
         </article-->
         <!-- end of sample -->
+
+          <!-- sample of a blog post -->
+        <!article>
+            <h2>1st human has received Elon Musk's Neuralink brain implant, billionaire says</h2>
+            <img src="https://i.cbc.ca/1.7099182.1706637841!/cpImage/httpImage/image.jpg_gen/derivatives/16x9_780/musk-neuralink.jpg" alt="article alt text here">
+            <a href="https://www.cbc.ca/news/business/musk-brain-implant-first-human-1.7099093">Article link here</a>
+            <time>Jan 30, 2024 1:21 PM EST </time>
+            <p>Summary of the article and the technology it talks about</p>
+        </article>
+        <!-- end of sample -->
+
+
     </main>
 </body>
 </html>
